<resources>
    <string name="app_name">nhatnguyen-17k3-recyclerview</string>
    <string name="button_recycler_view">recyclerview</string>
    <string name="summation">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="numberone">Number One</string>
    <string name="numbertwo">Number Two</string>
    <string name="exercise_calculator">Calculator</string>
    <string name="notify_number_two_0">Second number can not 0</string>
    <string name="text_slogan_below_logo">a bike for everyone, always</string>
    <string name="text_button_login_facebook">LOG IN WITH FACEBOOK</string>
    <string name="text_button_login_phonenum">LOG IN WITH PHONE NUMBER</string>
    <string name="text_new_urbi">New to urbi? Sign up for an account</string>
    <string name="text_subject_infor">Enter your details below to get started</string>
    <string name="text_subject_login">Welcome to urbi</string>
    <string name="text_checkbox_confirm">I have read and agree with the</string>
    <string name="text_link">terms and conditions</string>
    <string name="text_inputPhone">Enter mobie phone number</string>
    <string name="text_or"> or </string>
    <string name="text_fullname">Full Name</string>
    <string name="text_email">Email</string>
    <string name="exercise_login">Login</string>
    <string name="button_drawer_layout">drawerlayout</string>
    <string name="name">Main Content</string>
    <string name="notify_uri">That app do not support return uri for image</string>
    <string name="message">Hello man</string>
    <string name="button_savedata">Save Data</string>
    <string name="share_preference">Share Prefence</string>
    <string name="save_text">Save in external</string>
    <string name="save_sqlite">Save in DB</string>
    <string name="btn_input">Input</string>
    <string name="have_not_company">have not company</string>
    <string name="have_not_slogan">have not slogan</string>
    <string name="button_load_image">Load Image</string>
    <string name="text_internet">From internet</string>
    <string name="text_drawable">From drawable</string>
    <string name="text_assets">From assets</string>
    <string name="text_storage">From storage</string>
    <string name="image_picasso">Load image picasso</string>
    <string name="scale_edit_text">Scale edit_text</string>
    <string name="vector_image">Image by vector</string>
    <string name="button_viewpager">ViewPager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_name">Chưa có tên</string>
    <string name="no_old">Chưa có tuổi</string>
    <string name="no_house">Chưa có nhà</string>
    <string name="message_dialog">Do you want to skip ?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="update_information">Update Information</string>
    <string name="button_submit">submit</string>
    <string name="user_name">User Name</string>
    <string name="pass_word">Pass Word</string>
    <string name="button_test">Test</string>
    <string name="user_name_length">UserName from 5 to 24 case</string>
    <string name="user_name_upper_case">UserName have not upper case</string>
    <string name="user_name_special_case">UserName have special case</string>
    <string name="user_name_number">UserName have more 2 number</string>
    <string name="user_name_care">UserName UpperCase Or LowerCase</string>
    <string name="user_name_like">UserName like PassWord</string>
    <string name="password_special">PassWord have special case or number</string>
    <string name="password_length">Pass less than 7 or appear a case</string>
    <string name="password_space">Pass have space</string>
    <string name="password_three_upper_case">password have 3 upper case</string>
    <string name="message_login_success">login_success</string>
    <string name="password_blank">Password is blank</string>
    <string name="pass">Login</string>
    <string name="button_thread">Thread</string>
    <string name="btn_download">DownLoad</string>
    <string name="exercise_thread">Thread</string>
    <string name="exercise_count_down">CountTimer</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="birth_date">Birth date</string>
    <string name="button_data_binding">Data Binding</string>
    <string name="gender">Gender</string>
    <string name="contact">Contact Number</string>
    <string name="link">-</string>
    <string-array name="spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="button_canvas">Canvas</string>
    <string name="km">km</string>
    <string name="battery">Battery</string>
    <string name="plugged_ac">AC</string>
    <string name="plugged_usb">USB</string>
    <string name="percent">%</string>
    <string name="unknow">UNKNOW</string>
    <string name="status_changing">CHARGING</string>
    <string name="status_discharging">DISCHARGING</string>
    <string name="status_full">FULL</string>
    <string name="status_not_charging">NOTCHANGING</string>
    <string name="health_good">GOOD</string>
    <string name="health_dead">DEAD</string>
    <string name="health_over_voltage">OVER VOLTAGE</string>
    <string name="health_overheat">OVERHEAT</string>
    <string name="health_unspecified">FAILURE</string>
    <string name="preview_profile">Preview Profile</string>
</resources>
