<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.ui.viewpager.fragment.InforFragment">

    <TextView
        android:id="@+id/tvNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_name"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tvOldUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_old"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tvAdressUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_house"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/update"
        android:textSize="20dp" />
</LinearLayout>
