<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.ui.savedata.SaveDataActivity">

    <Button
        android:id="@+id/btnSharePreference"
        style="@style/btn_default"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/share_preference" />

    <Button
        android:id="@+id/btnInExternal"
        style="@style/btn_default"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save_text" />

    <Button
        android:id="@+id/btnSQLite"
        style="@style/btn_default"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save_sqlite" />
</LinearLayout>
