<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.ui.imageview.ImageActivity">

    <Button
        android:id="@+id/btnLoadImage"
        style="@style/btn_default"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/image_picasso" />

    <Button
        android:id="@+id/btnScaleEditText"
        style="@style/btn_default"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/scale_edit_text" />

    <Button
        android:id="@+id/btnImageVector"
        style="@style/btn_default"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/vector_image" />
</LinearLayout>
