<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="vn.asiantech.internship.LoginFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_subject_login"
        android:textStyle="bold"
        android:textColor="@color/color_text_subject_login"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_button_login_facebook"
        android:textStyle="bold"
        android:textColor="@color/color_text_button_facebook"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/border_buttonfacebook"
        android:id="@+id/btnLoginFacebook"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/color_textview"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_or"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/color_textview"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_button_login_phonenum"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/color_button_phonenum_and_signup"
        android:background="@drawable/border_buttonphone"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_new_urbi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_click_new_urbi"
            android:textStyle="bold"
            android:textColor="@color/color_button_phonenum_and_signup"/>
    </LinearLayout>

</LinearLayout>
