<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_information"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name">

            <EditText
                android:id="@+id/etdNameUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Old">

            <EditText
                android:id="@+id/edtOldUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Adress">

            <EditText
                android:id="@+id/edtAdressUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOk"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_click_button_dialog"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_click_button_dialog"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
